1.0beta.870
* "new layer" window will appear with empty layer name box, instead of having a "new layer" text in it.
  You can still submit the dialog without typing anything in, in that case new layer will get default name.

1.0beta.865
* A fix to get Maya 2009 UI work again;
* Bug fix: paste weights to mask should properly work now;
* Bug fix: setting mask weights via API is properly undoable now;
* Bug fix: changing current layer while painting now properly highlights it's current influence;
* Bug fix: multi-layer selection now works for layer on/off action;
* Bug fix: long mesh names will no longer resize main UI window;
* Bug fix: update check window size should now be less awkward;
* UI code will now verify that plugin version matches UI version (this mainly solves upgrade issues,
  when old plugin sometimes gets loaded with newer ui) 
* API changes:
	added MllInterface.setCurrentPaintTarget(): universal way to set current paint target (influence or mask)
	added MllInterface.getCurrentPaintTarget()
	 

1.0 beta build 860
* Introduced weights clipboard:
	* A simple and intuitive way to move weights from one influence on to another;
	* Cut/copy weights for selected influence;
	* Paste weights on to another influence, either adding new weights to existing ones, or replacing them.
	* Cross-mesh copy/paste will only work if vertex counts are identical; this feature should mainly be used
	  on the same mesh.
* Changed how influence names are displayed:
	* Influences with unique names will display just short name, as previously
	* Influences with duplicate names will display a unique name in the context of the list; that is, if
	  rig contains two joints named "joint1", then they will be displayed as "joint1 (joint2|joint1)",
	  but behaviour will only occur if the list is actually displaying two "joint1" items.
	* The idea behind the change is to only show long names when short name is not unique in 
	  a skin cluster.