@@ -1,0 +1,14 @@
+#pragma once
+
+#include "maya.h"
+
+
+class ReferenceMeshHolder {
+private:
+	MFnMeshData meshData;
+	MFnMesh mesh;
+public:
+	void setMesh(MDoubleArray vertices,MIntArray triangles);
+
+};
+
