@@ -524,6 +524,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\tests\ReferenceMeshHolderTest.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\tests\SkinLayerWeightListTests.cpp"
 				>
 			</File>
