@@ -1,6 +1,13 @@
 1.0beta.870
 * "new layer" window will appear with empty layer name box, instead of having a "new layer" text in it.
   You can still submit the dialog without typing anything in, in that case new layer will get default name.
+* Import/Export: importing weights on to a different mesh is now possible. Mesh information is now exported 
+  with weights file (vertex positions + triangles), and when importing into a mesh with different vertex count/
+  different structure, an approximation is used instead.
+* API changes:
+	* added MllInterface.setWeightsReferenceMesh() 
+  
+  
 
 1.0beta.865
 * A fix to get Maya 2009 UI work again;
